<resources>
    <string name="app_name">GitHubSer</string>
    <string name="app_jargon">Search and save Github users with an easy way</string>
    <string name="search_query_hint">Search users…</string>
    <string name="desc_users_is_empty">Waiting to search users…</string>
    <string name="desc_users_is_not_found">Users not found :(</string>
    <string name="desc_saved_is_empty">Saved users is empty</string>
    <string name="desc_follower_is_empty">No %1$s :(</string>
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>