<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.MainActivity">

    <View
        android:id="@+id/view"
        style="@style/CustomViewBackground"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_jargon_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/app_jargon"
        android:textColor="@color/white"
        android:textSize="@dimen/text_11"
        app:layout_constraintStart_toStartOf="@+id/tv_title_app"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_app" />

    <ImageButton
        android:id="@+id/btn_saved_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@drawable/ic_favorite"
        app:layout_constraintEnd_toStartOf="@+id/btn_theme_mode"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_title_app"
        app:layout_constraintTop_toTopOf="@id/btn_theme_mode" />

    <ImageButton
        android:id="@+id/btn_theme_mode"
        style="@style/CustomBtnChangeTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/sv_github_users"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_round_no_border_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_jargon_app"
        app:queryHint="@string/search_query_hint"
        app:searchIcon="@drawable/ic_search"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="146dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="@dimen/padding_small"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        tools:listitem="@layout/item_list_users" />

    <include
        android:id="@+id/layout_user_empty"
        layout="@layout/item_users_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>